--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:white;
+    background-color:rgb(0, 0, 0);
 }
 header{
     display:flex;
@@ -26,10 +26,18 @@ header-button{
     background-color: white;
     display: flex;
     flex-direction:column;
+  
 }
 
 .board .row{
-    background-color:black;
-    height:50px;
     width:100%;
+    flex-grow:1;
+    display:flex;
+}
+.board .row .square{
+    background-color:pink;
+    min-width:50px;
+    min-height:0px;
+    flex-basis:auto;
+    flex-grow:1;
 }
